test/good/loops/for09.px

for x in 1.75..3.75 do
    print x
