test/bad/loops/for17.px

for x in 0..true do
    skip
